--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,15 +12,14 @@
   </head>
 
   <body>
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <!-- registration_pathはヘルパーメソッドで、"GET /register"に変換される -->
+        <li><%= link "ユーザ登録", to: registration_path(@conn, :new) %></li>
+      </ul>
+      <span class="logo"></span>
+    </div>
     <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
