--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -14,8 +14,13 @@
   <body>
     <div class="header">
       <ul class="nav nav-pills pull-right">
-        <!-- registration_pathはヘルパーメソッドで、"GET /register"に変換される -->
-        <li><%= link "ユーザ登録", to: registration_path(@conn, :new) %></li>
+        <%= if logged_in?(@conn) do %>
+          <li><%= current_user(@conn).email %></li>
+          <li><%= link "ログアウト", to: session_path(@conn, :delete), method: :delete %></li>
+        <% else %>
+          <li><%= link "ユーザ登録", to: registration_path(@conn, :new) %></li>
+          <li><%= link "ログイン", to: session_path(@conn, :new) %></li>
+        <% end %>
       </ul>
       <span class="logo"></span>
     </div>
